# wechat-article-analyzer

./: .gitignore  LICENSE  README.md  check_db.py  check_db_detail.py  check_errors.py  config.example.json  crawl_pending.py  errors.txt  generate_full_report.py  import_articles.py  print_log.py  pyproject.toml  requirements.txt  test_htmlcleaner.py  test_htmlcleaner_simple.py  test_step_by_step.py  trigger_analysis.py
docs/: ARCHITECTURE-v2.md  ARCHITECTURE.md  PRD.md  TECHNICAL.md  USER_GUIDE.md  class-diagram.mermaid  paper.md  sequence-diagram.mermaid
frontend/: index.html  package-lock.json  package.json  static-server.js  tailwind.config.js  test-react.html  vite.config.ts
frontend/src/: App.tsx  index.css  main.test.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConceptNode.tsx  ErrorAlert.tsx  ErrorBoundary.tsx  Layout.tsx  StatCard.tsx  (+2 more)
reports/: concept_graph_full.json  concept_graph_full.md  report_2001articles.md  report_2012articles.md  report_2016articles.md
src/: __init__.py  config.py  database.py  main.py  models.py
src/analyzer/: __init__.py  article_analyzer.py  concepts.py  deepseek_client.py
src/api/: app.py  dependencies.py  models.py  routes.py
src/crawler/: __init__.py  article_content.py  article_list.py  browser.py  login.py
src/report/: __init__.py  concept_graph.py  convergence_report.py  evolution_tracker.py
src/utils/: __init__.py  html_cleaner.py  logger.py  progress.py
tests/: __init__.py  test_article_analyzer.py  test_concepts.py  test_database.py  test_deepseek_client.py  test_html_cleaner.py
(+11 files in other folders)
