[project]
name = "wechat-article-analyzer"
version = "2.0.0"
description = "微信公众号文章采集与理论收敛分析工具"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "requests>=2.31.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
wechat-analyzer = "src.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools]
packages = ["src", "src.crawler", "src.analyzer", "src.report", "src.utils", "src.api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
